--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta property="og:title" content="Bucky Discord Bot | Top.gg" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://bot.ciderboi.xyz" />
-    <meta property="og:description" content="🚀 A simple activity bot \n✖️ Multiple Activites\n🏠 https://discord.ciderboi.xyz\n➡️ https://ciderboi.xyz" />
+    <meta property="og:description" content="🚀 A simple activity bot 
+                                             ✖️ Multiple Activites
+                                             🏠 https://discord.ciderboi.xyz
+                                             ➡️ https://ciderboi.xyz" />
     <meta name="theme-color" content="#2f3136">
   </head>
 </html>
