--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
                                              ✖️ Multiple Activites
                                              🏠 https://discord.ciderboi.xyz
                                              ➡️ https://ciderboi.xyz" />
-    <meta name="theme-color" content="#2f3136">
+    <meta name="theme-color" content="#ff3366">
+    <meta property="og:site_name" content="Top.gg">
+    <meta property="og:image" content="https://top.gg/assets/previews/social-preview-main.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
   </head>
 </html>
