--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
   <head>
     <meta http-equiv="refresh" content="0; URL=https://top.gg/bot/864365352930115614">
+    <meta name="next-head-count" content="31">
+    <meta name="description" content="🚀 A simple activity bot 
+                                      ✖️ Multiple Activites 
+                                      🏠 https://dsc.gg/bot-lab
+                                      ➡️ https://ciderboi.xyz">
+    
     <meta property="og:title" content="Bucky Discord Bot | Top.gg" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://bot.ciderboi.xyz" />
@@ -11,8 +17,19 @@
     <meta name="theme-color" content="#ff3366">
     <meta property="og:site_name" content="Top.gg">
     <meta property="og:image" content="https://top.gg/assets/previews/social-preview-main.png">
+    <meta name="og:image" content="https://images.discordapp.net/avatars/864365352930115614/1941774bf10330ea1a353209426ae03b.png?size=128">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
+    <meta property="og:image:secure_url" content="https://top.gg/assets/previews/social-preview-main.png">
+  
+    <meta name="twitter:title" content="Bucky Discord Bot | Top.gg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:description" content="🚀 A simple activity bot 
+                                              ✖️ Multiple Activites 
+                                              🏠 https://dsc.gg/bot-lab
+                                              ➡️ https://ciderboi.xyz">
+    <meta name="twitter:site" content="@jointopgg">
+    <meta property="twitter:image" content="https://top.gg/assets/previews/social-preview-main.png">
   </head>
 </html>
